src/objects/Marketing_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Address_to_Deliver_Application_Docs__c</fullName>
        <inlineHelpText>Address to Which Application and Supporting Documents Should Be Delivered (if not uploading on this system)</inlineHelpText>
        <label>Address to Deliver Application Documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Deadline_Date_at_5_00pm__c</fullName>
        <inlineHelpText>Deadline time is by 5:00pm of this date.</inlineHelpText>
        <label>Application Deadline Date (at 5:00pm)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Sq_Ft_Range_if_more_than_1_unit__c</fullName>
        <label>Area (Sq. Ft.) Range if more than 1 unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_Commission_Information__c</fullName>
        <formula>IF (  ISPICKVAL(Commissions_to_BMR_Buyer_Realtor__c , &quot;Yes&quot;) , &quot;Realtor commission is based on 2.5% of the sales price. Broker must accompany prospective purchaser on the prospects first visit to the property.  Registration will occur at that time by filling out a registration card.&quot; , &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR Commission Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_Unit_Appliances_Description__c</fullName>
        <label>BMR Unit Appliances Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMR_Unit_Finishings_and_Type__c</fullName>
        <inlineHelpText>Under finishings and type, include flooring, cabinets, carpet, etc.</inlineHelpText>
        <label>BMR Unit Finishings and Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Board_of_Supervisors_Name__c</fullName>
        <description>Board of Supervisors</description>
        <inlineHelpText>Board of Supervisors</inlineHelpText>
        <label>Board of Supervisors Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>John Avalos</fullName>
                </value>
                <value>
                    <fullName>London Breed</fullName>
                </value>
                <value>
                    <fullName>David Campos</fullName>
                </value>
                <value>
                    <fullName>Aaron Peskin</fullName>
                </value>
                <value>
                    <fullName>Malia Cohen</fullName>
                </value>
                <value>
                    <fullName>Mark Farrell</fullName>
                </value>
                <value>
                    <fullName>Jane Kim</fullName>
                </value>
                <value>
                    <fullName>Eric Mar</fullName>
                </value>
                <value>
                    <fullName>Katy Tang</fullName>
                </value>
                <value>
                    <fullName>Scott Wiener</fullName>
                </value>
                <value>
                    <fullName>Norman Yee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_City__c</fullName>
        <description>From Building, City in which the Building is located.</description>
        <formula>Listing__r.Building__r.Building_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Building, City in which the Building is located.</inlineHelpText>
        <label>Building City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Photo_URL__c</fullName>
        <formula>Listing__r.Building__r.Photo_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Photo URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_ST_Address_Planning_Approval__c</fullName>
        <description>From Building, Street Address of the Building during planning approval.</description>
        <formula>Listing__r.Building__r.Building_ST_Address_Planning_Approval__c</formula>
        <inlineHelpText>From Building, Street Address of the Building during planning approval.</inlineHelpText>
        <label>Building ST Address Planning Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Selection_Criteria__c</fullName>
        <inlineHelpText>Building Selection Criteria should include information about: 

Ability to pay rent standard 
Credit Standard 
Rental History Standard 
Criminal History Standard 
Maximum Household Size Standard 
Other</inlineHelpText>
        <label>Building Selection Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Building_State__c</fullName>
        <description>From Building, State the Building is located in.</description>
        <formula>Listing__r.Building__r.Building_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From Building, State the Building is located in.</inlineHelpText>
        <label>Building State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Street_Address__c</fullName>
        <formula>Listing__r.Building__r.Building_Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code_Planning_Approval__c</fullName>
        <formula>Listing__r.Building__r.Building_Zip_Code_Planning_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Zip Code Planning Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Zip_Code__c</fullName>
        <description>From the Building, Zip Code the Building is located in.</description>
        <formula>Listing__r.Building__r.Building_Zip_Code__c</formula>
        <inlineHelpText>From the Building, Zip Code the Building is located in.</inlineHelpText>
        <label>Building Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_2nd_Special_Remark__c</fullName>
        <defaultValue>&quot;City holds the right of first refusal of this property.&quot; 
&amp; BR() &amp; BR() &amp; 
&quot;City 2nd Loans are available to qualified buyers - for program information please visit: http://sf-moh.org/index.aspx?page=747&quot;</defaultValue>
        <label>City 2nd Special Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City_Wide_Weekend_Paper_1__c</fullName>
        <description>City Wide Weekend Paper</description>
        <inlineHelpText>City Wide Weekend Paper</inlineHelpText>
        <label>City-Wide Weekend Paper 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco Chronicle</fullName>
                </value>
                <value>
                    <fullName>San Francisco Examiner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Wide_Weekend_Paper_2__c</fullName>
        <label>City-Wide Weekend Paper 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco Chronicle</fullName>
                </value>
                <value>
                    <fullName>San Francisco Examiner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Wide_Wknd_Paper_1_1st_Posting_Date__c</fullName>
        <description>First Posting Date for the First City-Wide Weekend Paper.  Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</description>
        <inlineHelpText>First Posting Date for the First City-Wide Weekend Paper.  Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</inlineHelpText>
        <label>City-Wide Wknd Paper 1: 1st Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_Wide_Wknd_Paper_1_2nd_Posting_Date__c</fullName>
        <description>Second Posting Date - Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</description>
        <inlineHelpText>Second Posting Date - Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</inlineHelpText>
        <label>City-Wide Wknd Paper 1: 2nd Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_Wide_Wknd_Paper_2_1st_Posting_Date__c</fullName>
        <description>Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</description>
        <inlineHelpText>Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</inlineHelpText>
        <label>City-Wide Wknd Paper 2: 1st Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_Wide_Wknd_Paper_2_2nd_Posting_Date__c</fullName>
        <description>Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</description>
        <inlineHelpText>Saturday or Sunday, at least one week apart, in the 3 weeks after the marketing launch date</inlineHelpText>
        <label>City-Wide Wknd Paper 2: 2nd Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissions_to_BMR_Buyer_Realtor__c</fullName>
        <description>Will you be providing commission for realtors representing your BMR buyers?</description>
        <inlineHelpText>Will you be providing commission for realtors representing your BMR buyers?</inlineHelpText>
        <label>Commissions to BMR Buyer Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_to_Market_Rate_Buyer_Realtor__c</fullName>
        <description>Will you be providing commission for any market rate buyer’s realtor in your building?</description>
        <inlineHelpText>Will you be providing commission for any market rate buyer’s realtor in your building?</inlineHelpText>
        <label>Commissions to Market Rate Buyer Realtor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Standard__c</fullName>
        <label>Credit Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Standard__c</fullName>
        <label>Criminal History Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_1_Supe_Office_Announcement__c</fullName>
        <description>Board of Supes District Office announcement dates</description>
        <inlineHelpText>Board of Supes District Office announcement dates</inlineHelpText>
        <label>Date 1: Supe Office Announcement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2_Supe_Office_Announcement__c</fullName>
        <description>Board of Supes District Office announcement dates</description>
        <inlineHelpText>Board of Supes District Office announcement dates</inlineHelpText>
        <label>Date 2: Supe Office Announcement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Developer_City__c</fullName>
        <description>City of the Developer identified on the Building.</description>
        <formula>Listing__r.Building__r.Developer__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>City of the Developer identified on the Building.</inlineHelpText>
        <label>Developer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Email__c</fullName>
        <description>The email address of the developer identified on the building.</description>
        <formula>Listing__r.Building__r.Developer__r.Email__c</formula>
        <inlineHelpText>The email address of the developer identified on the building.</inlineHelpText>
        <label>Developer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Phone__c</fullName>
        <description>The phone number for the developer identified on the building.</description>
        <formula>Listing__r.Building__r.Developer__r.Phone</formula>
        <inlineHelpText>The phone number for the developer identified on the building.</inlineHelpText>
        <label>Developer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_State__c</fullName>
        <description>State of the Developer identified on the Building.</description>
        <formula>Listing__r.Building__r.Developer__r.ShippingState</formula>
        <inlineHelpText>State of the Developer identified on the Building.</inlineHelpText>
        <label>Developer State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Street_Address__c</fullName>
        <description>The Street Address of the Developer Identified on the Building.</description>
        <formula>Listing__r.Building__r.Developer__r.ShippingStreet</formula>
        <inlineHelpText>The Street Address of the Developer Identified on the Building.</inlineHelpText>
        <label>Developer Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Zip_Code__c</fullName>
        <description>Zip Code of the Developer identified on the building.</description>
        <formula>Listing__r.Building__r.Developer__r.ShippingPostalCode</formula>
        <inlineHelpText>Zip Code of the Developer identified on the building.</inlineHelpText>
        <label>Developer Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <description>From the Building, Name of the Developer</description>
        <formula>Listing__r.Building__r.Developer__r.Name</formula>
        <inlineHelpText>From the Building, Name of the Developer</inlineHelpText>
        <label>Developer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Address__c</fullName>
        <label>Development Escrow Officer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Email__c</fullName>
        <label>Development Escrow Officer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Name__c</fullName>
        <label>Development Escrow Officer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Escrow_Officer_Phone__c</fullName>
        <label>Development Escrow Officer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Development_Title_Company__c</fullName>
        <label>Development Title Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Level_of_Applicants__c</fullName>
        <defaultValue>&quot;% of Area Median Income&quot;&amp; BR() &amp; BR() &amp; 

&quot;1 Person - $81,550&quot; &amp;BR() &amp; 
&quot;2 Persons - $93,250&quot; &amp;BR() &amp; 
&quot;3 Persons - $104,900&quot; &amp;BR() &amp; 
&quot;4 Persons - $116,500&quot; &amp;BR()</defaultValue>
        <label>Income Level of Applicants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Session_Date_Time__c</fullName>
        <label>Information Session Date/Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_building_Fannie_Mae_approved__c</fullName>
        <label>Is the building Fannie Mae approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_w_Buyer_s_Lending_Ability_Reason__c</fullName>
        <description>Please explain the situation(s) about your building that can impact buyer&apos;s ability to secure loans.</description>
        <inlineHelpText>Please explain the situation(s) about your building that can impact buyer&apos;s ability to secure loans.</inlineHelpText>
        <label>Issues w/ Buyer&apos;s Lending Ability Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_with_Buyer_s_Ability_to_Get_Loans__c</fullName>
        <description>Is there anything MOHCD should know about your building in terms of buyer’s ability to secure loans (e.g. too many renters for FNMA approval; a pending lawsuit, etc.)?</description>
        <inlineHelpText>Is there anything MOHCD should know about your building in terms of buyer’s ability to secure loans (e.g. too many renters for FNMA approval; a pending lawsuit, etc.)?</inlineHelpText>
        <label>Issues with Buyer&apos;s Ability to Get Loans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leasing_Agent_City__c</fullName>
        <description>The City of the Leasing Agent identified on the building.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.MailingCity</formula>
        <inlineHelpText>The City of the Leasing Agent identified on the building.</inlineHelpText>
        <label>Leasing Agent City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Email__c</fullName>
        <description>Email of the Leasing Agent.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.Email</formula>
        <inlineHelpText>Email of the Leasing Agent.</inlineHelpText>
        <label>Leasing Agent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Name__c</fullName>
        <description>From the building, the name of the identified leasing agent.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.FirstName &amp; &quot; &quot; &amp;  Listing__r.Building__r.Leasing_Agent__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the building, the name of the identified leasing agent.</inlineHelpText>
        <label>Leasing Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_State__c</fullName>
        <description>The State of the Leasing Agent identified on the building.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The State of the Leasing Agent identified on the building.</inlineHelpText>
        <label>Leasing Agent State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Street_Address__c</fullName>
        <description>From the Building, the street address of the leasing agent.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.MailingStreet</formula>
        <inlineHelpText>From the Building, the street address of the leasing agent.</inlineHelpText>
        <label>Leasing Agent Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Agent_Zip_Code__c</fullName>
        <description>Postal Code of the Leasing Agent.</description>
        <formula>Listing__r.Building__r.Leasing_Agent__r.MailingPostalCode</formula>
        <inlineHelpText>Postal Code of the Leasing Agent.</inlineHelpText>
        <label>Leasing Agent Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasing_Company_Name__c</fullName>
        <description>From the Building, the Leasing Company responsible</description>
        <formula>Listing__r.Building__r.Leasing_Company__r.Name</formula>
        <inlineHelpText>From the Building, the Leasing Company responsible</inlineHelpText>
        <label>Leasing Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lenders_aren_t_MOHCD_BMR_Approved_reason__c</fullName>
        <description>Please explain why your lenders are not approved by MOHCD as a BMR lender.</description>
        <inlineHelpText>Please explain why your lenders are not approved by MOHCD as a BMR lender.</inlineHelpText>
        <label>Lenders aren&apos;t MOHCD BMR-Approved reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lottery_City__c</fullName>
        <defaultValue>&quot;San Francisco&quot;</defaultValue>
        <label>Lottery City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Date_Time__c</fullName>
        <label>Lottery Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_Date__c</fullName>
        <label>Lottery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_End_Time__c</fullName>
        <label>Lottery End Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_End__c</fullName>
        <description>End of the Lottery - Datetime</description>
        <inlineHelpText>End of the Lottery - Datetime</inlineHelpText>
        <label>Lottery End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lottery_Information__c</fullName>
        <label>Lottery Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lottery_Location__c</fullName>
        <label>Lottery Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lottery_Results_Date__c</fullName>
        <description>Date Lottery Results are posted</description>
        <inlineHelpText>Date Lottery Results are posted</inlineHelpText>
        <label>Lottery Results Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lottery_Start_Time__c</fullName>
        <label>Lottery Start Time</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Street_Address__c</fullName>
        <description>Street Address of the Lottery - Such as 1 Market Street</description>
        <inlineHelpText>Street Address of the Lottery - Such as 1 Market Street</inlineHelpText>
        <label>Lottery Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Summary__c</fullName>
        <description>Summary of the Lottery Results.</description>
        <inlineHelpText>Summary of the Lottery Results.</inlineHelpText>
        <label>Lottery Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lottery_Venue__c</fullName>
        <description>Location where the lottery will be held.</description>
        <inlineHelpText>Location where the lottery will be held.</inlineHelpText>
        <label>Lottery Venue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Commission_Arrangement_Rules__c</fullName>
        <label>MR Commission Arrangement (% &amp; Rules)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Unit_Appliances_Description__c</fullName>
        <inlineHelpText>List all Market Rate Unit Appliances (Make / Model / Color)</inlineHelpText>
        <label>Market Rate Unit Appliances Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Rate_Unit_Finishings_and_Type__c</fullName>
        <description>List all Market Rate Unit Finishing and Type.</description>
        <inlineHelpText>Under finishings and type, include flooring, cabinets, carpet, etc.</inlineHelpText>
        <label>Market Rate Unit Finishings and Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Approval_Date__c</fullName>
        <label>Marketing Plan Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Approval_Status__c</fullName>
        <label>Marketing Plan Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Plan_MOHCD_Follow_up_Details__c</fullName>
        <label>Marketing Plan MOHCD Follow-up Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Plan Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Submit_Date__c</fullName>
        <label>Marketing Plan Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Qualifying_Income_Level_of_HH__c</fullName>
        <defaultValue>&quot;Maximum household income must not exceed the following amounts by household size:&quot; &amp; BR() &amp; BR() &amp; 

&quot;100% of Maximum Income by Household Size derived from the Unadjusted Area Median Income (AMI) for HUD Metro Fair Market Rent Area (HMFA) that contains San Francisco 2014&quot; 
&amp; BR() &amp; BR() &amp; 

&quot;A one person household can make no more than $67,950&quot; &amp; BR() &amp; 
&quot;A two person household can make no more than $77,700&quot; &amp; BR() &amp; 
&quot;A three person household can make no more than $87,400&quot; &amp; BR() &amp; 
&quot;A four person household can make no more than $97,100&quot; &amp; BR() &amp; 
&quot;A five person household can make no more than $104,850&quot; &amp; BR() &amp; 
&quot;A six person household can make no more than $112,650&quot; &amp; BR() &amp; 
&quot;A seven person household can make no more than $120,400&quot; &amp; BR() &amp; BR() &amp; 

&quot;(Visit www.sfmohcd.org for larger households.)&quot;&amp; BR() &amp; BR() &amp; 

&quot;Note: These units are priced to be affordable to households at 90% of AMI but will allow households earning up to 100% of AMI to qualify for the units per new program rules outlined in the City and County of San Francisco Inclusionary Housing Program Monitoring and Procedures Manual 2013. &quot;</defaultValue>
        <inlineHelpText>Maximum qualifying income level of applicant households</inlineHelpText>
        <label>Max. Qualifying Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowable_Income_Level_of_HH__c</fullName>
        <defaultValue>&quot;of Maximum Income by Household Size derived from the Unadjusted Area Median Income (AMI) for HUD Metro Fair Market Rent Area (HMFA) that contains San Francisco 2013&quot; &amp; BR() &amp; BR() &amp; 

&quot;A one person household can make no more than $37,350&quot;&amp; BR()&amp; 
&quot;A two person household can make no more than $42,750&quot;&amp; BR()&amp; 
&quot;A three person household can make no more than $48,050&quot;&amp; BR()&amp; 
&quot;A four person household can make no more than $53,400&quot;&amp; BR()&amp; 
&quot;A five person household can make no more than $57,650&quot;&amp; BR()&amp; 
&quot;A six person household can make no more than $61,950&quot;&amp; BR()&amp; 
&quot;A seven person household can make no more than $66,200&quot;&amp; BR()&amp; 

&quot;(Please visit www.sfmohcd.org for larger households.)&quot;</defaultValue>
        <inlineHelpText>Maximum Allowable Income Level of Households</inlineHelpText>
        <label>Maximum Allowable Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_City_2nd_Loan_Amount__c</fullName>
        <defaultValue>&quot;$100,000 or 15% of the purchase price, whichever is less.&quot;</defaultValue>
        <label>Maximum City 2nd Loan Amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Size_Rule__c</fullName>
        <label>Maximum Household Size Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Household_Size_Standard__c</fullName>
        <label>Maximum Household Size Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Allowable_Income_Level_of_HH__c</fullName>
        <label>Minimum Allowable Income Level of HH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Household_Size_Rule__c</fullName>
        <label>Minimum Household Size Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_Dues__c</fullName>
        <label>Monthly HOA Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent__c</fullName>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Building__c</fullName>
        <description>Name of Building</description>
        <formula>Listing__r.Building__r.Property_Name__c</formula>
        <inlineHelpText>Name of Building</inlineHelpText>
        <label>Name of Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_City_and_County_of_SF_Planner__c</fullName>
        <description>From the Building, Name of the Responsible City and County of San Francisco Planner.</description>
        <formula>Listing__r.Building__r.Name_of_City_and_County_of_SF_Planner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the Building, Name of the Responsible City and County of San Francisco Planner.</inlineHelpText>
        <label>Name of City and County of SF Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <description>Neighborhood, from the building</description>
        <formula>TEXT (Listing__r.Building__r.Neighborhood__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Neighborhood, from the building</inlineHelpText>
        <label>Neighborhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Special_Restrictions_NSR_Doc__c</fullName>
        <description>From the Building, Notice of Special Restrictions Doc.</description>
        <formula>Listing__r.Building__r.Notice_of_Special_Restrictions_NSR_Doc__c</formula>
        <inlineHelpText>From the Building, Notice of Special Restrictions Doc.</inlineHelpText>
        <label>Notice of Special Restrictions (NSR) Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_House_Dates_Times__c</fullName>
        <label>Open House Dates/Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Fees_and_or_Building_Rules__c</fullName>
        <inlineHelpText>Some examples include late payment fees, pet fees, or other building fees.</inlineHelpText>
        <label>Other Fees and/or Building Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Qualification_Notes__c</fullName>
        <label>Other Qualification Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Standard__c</fullName>
        <label>Other Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>